--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
   ],
   "dependencies": {
     "moment": "momentjs#~2.10.6",
-    "backbone": "~1.2.3"
+    "backbone": "~1.2.3",
+    "bootstrap": "~3.3.5"
   }
 }
