--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-connect": "^2.2.0",
     "gulp-less": "^3.0.3",
     "gulp-uglify": "^1.4.2",
-    "opn": "^3.0.3"
+    "opn": "^3.0.3",
+    "path": "^0.12.7"
   }
 }
