--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "moment": "momentjs#~2.10.6",
     "backbone": "~1.2.3",
     "bootstrap": "~3.3.5",
-    "leaflet": "~0.7.7"
+    "leaflet": "~0.7.7",
+    "firebase": "~2.3.1"
   }
 }
