--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "backbone": "~1.2.3",
     "bootstrap": "~3.3.5",
     "leaflet": "~0.7.7",
-    "firebase": "~2.3.1"
+    "firebase": "~2.3.1",
+    "handlebars": "~4.0.4"
   }
 }
